--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,12 @@
         "kriswallsmith/buzz": "^0.15.0"
     },
     "require-dev": {
-        "phpspec/phpspec" : "2.4.0-alpha2"
+        "phpspec/phpspec" : "2.4.0-alpha2",
+        "bex/behat-extension-driver-locator": "*",
+        "bex/behat-screenshot": "*",
+        "bex/behat-test-runner": "*",
+        "jakoch/phantomjs-installer": "^1.9.8",
+        "behat/mink-selenium2-driver": "^1.3.0"
     },
     "config": {
         "bin-dir": "bin"
@@ -28,5 +33,13 @@
         "psr-4": {
             "Bex\\Behat\\ScreenshotExtension\\Driver\\": "src"
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ],
+        "post-update-cmd": [
+            "PhantomInstaller\\Installer::installPhantomJS"
+        ]
     }
 }
